...
        android:id="@+id/loginBtnInLoginPage"
        style="@android:style/Widget.Button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16sp"
        android:background="@drawable/background_login_btn"
        android:text="@string/login"
        android:textColor="@color/light_selver"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needInRegisterPage" />

...
